[tool.poetry]
name = "mobile-coverage"
version = "0.1.0"
description = ""
authors = ["Tom Freeman <tomrfreeman3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
geopandas = "^1.1.2"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
duckdb = "^1.4.3"
shapely = "^2.1.2"
hdbscan = "^0.8.41"
mlflow = "^3.8.1"
datasets = "^4.5.0"
keplergl = "^0.3.7"
seaborn = "^0.13.2"
plotly = "^6.5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
